fixed layout gap was showing index.html style.css

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap');
 
-html, body {
+html, body{
     padding: 0;
     margin: 0;
 }
@@ -32,7 +32,6 @@ a {
     background-repeat: no-repeat;
     background-position: relative;
     background-size: cover;
-    width: 100%;
     height: 45rem;
 }
 
@@ -53,7 +52,6 @@ nav ul {
     color: black;
     margin-top: 140px;
     margin-left: 50px;
-    width: 100%;
   }
 
   .btn{
@@ -187,4 +185,5 @@ h3 {
 .gridtwo {
     text-align: center;
 }
-/* MEDIA QUERY **********************************/
+
+/* MEDIA QUERY**************************** */
